--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@hono/node-server": "^1.19.0",
     "@hono/zod-validator": "^0.7.2",
-    "hono": "^4.9.2"
+    "hono": "^4.9.2",
+    "pino": "^9.9.0"
   },
   "devDependencies": {
     "@types/node": "^24.3.0"
